test/compile_errors/stage1/obj/div_on_undefined_value.zig
comptime {
    var a: i64 = undefined;
    _ = a / a;
}

// div on undefined value
//
// tmp.zig:3:9: error: use of undefined value here causes undefined behavior
